[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/scripts/util/message.gd" type="Script" id=1]
[ext_resource path="res://assets/themes/Installation.tres" type="Theme" id=2]
[ext_resource path="res://source/origin/Icon.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/themes/Origin.tres" type="Theme" id=4]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://assets/fonts/Ubuntu-Light.ttf"

[sub_resource type="DynamicFont" id=2]
use_mipmaps = true
use_filter = true
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://assets/fonts/RedHatDisplay-Black.ttf"

[sub_resource type="DynamicFont" id=4]
size = 12
use_mipmaps = true
use_filter = true
font_data = SubResource( 3 )

[sub_resource type="StyleBoxFlat" id=5]
content_margin_left = 4.0
content_margin_right = 4.0
bg_color = Color( 1, 1, 1, 0.2 )
border_width_top = 4
border_width_bottom = 4
border_color = Color( 0, 0, 0, 0 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=6]

[node name="Panel" type="Panel"]
margin_right = 736.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="ProgressBar" type="ProgressBar" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
allow_greater = true
percent_visible = false

[node name="Icon" parent="." instance=ExtResource( 3 )]

[node name="Container" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.0

[node name="Label" type="Label" parent="Container"]
margin_top = 6.0
margin_bottom = 25.0
custom_colors/font_color = Color( 0.901961, 0.901961, 0.901961, 1 )
custom_fonts/font = SubResource( 2 )
valign = 1

[node name="Description" type="Label" parent="Container"]
margin_left = 4.0
margin_top = 6.0
margin_right = 4.0
margin_bottom = 25.0
custom_colors/font_color = Color( 0.901961, 0.901961, 0.901961, 0.392157 )
custom_fonts/font = SubResource( 2 )
valign = 1

[node name="RAMPrompt" type="HSlider" parent="Container"]
visible = false
margin_left = 8.0
margin_right = 168.0
margin_bottom = 32.0
rect_min_size = Vector2( 160, 32 )
theme = ExtResource( 4 )
min_value = 1.0
max_value = 16.0
value = 3.0
rounded = true

[node name="Value" type="Label" parent="Container/RAMPrompt"]
modulate = Color( 1, 1, 1, 0.392157 )
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 8.0
margin_top = -11.0
margin_right = 48.0
margin_bottom = 11.0
custom_fonts/font = SubResource( 4 )
text = "3 GB"
valign = 1

[node name="OptionButton" type="OptionButton" parent="Container"]
margin_left = 8.0
margin_right = 176.0
margin_bottom = 32.0
rect_min_size = Vector2( 168, 0 )
theme = ExtResource( 4 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 5 )
clip_text = true

[node name="ContinuePrompt" type="Button" parent="."]
visible = false
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -91.0
margin_top = -16.0
margin_bottom = 16.0
theme = ExtResource( 4 )
text = "Continue"

[node name="DownloadPrompt" type="Button" parent="."]
visible = false
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -101.0
margin_top = -16.0
margin_bottom = 16.0
theme = ExtResource( 4 )
text = "Download"

[connection signal="value_changed" from="Container/RAMPrompt" to="." method="_on_RAMPrompt_value_changed"]
[connection signal="pressed" from="ContinuePrompt" to="." method="_on_ContinuePrompt_pressed"]
[connection signal="pressed" from="DownloadPrompt" to="." method="_on_DownloadPrompt_pressed"]
